tests/paczka2/big_fuzzy/30561747.err
Error in line 3: HkqEE A986 85,8
Error in line 18: HkqEE A986 -1,5
Error in line 20: 86VC A873 56,8
Error in line 16: HkqEE A986 16,1
Error in line 28: 86VC S168 463,01
Error in line 17: 7K1i S168 3,6
Error in line 46: HkqEE S168 9,6
Error in line 22: 86VC S168 99,6
Error in line 52: 6VC A73 22,9
Error in line 48: 86VC A873 26,6
Error in line 47: HkqEE S812 50,1
Error in line 64: 86VC A986 o89,9
Error in line 75: HkqEE A873 14,9
Error in line 70: 86VC A873 90,3
Error in line 92: 7K1i S168 13,60
Error in line 96: 7K1i S812 29,47
Error in line 97: bxANF5O8per A873 28,4
Error in line 99: 7K1i A986 17,7
Error in line 124: h2c201Qi4z A9i6 60,6
Error in line 117: utC2bUdk9j6 S812 29,5
Error in line 127: bxANF5O8per A873 88,2
Error in line 123: h2c201Qi4z A986 26,7
Error in line 133: bxANF5O8per S812 14,0
Error in line 136: h2c201Qi4z S168 53,4
Error in line 143: HkqEE A986 79,4
Error in line 153: utC2bUdk9j6 S168 59,8
Error in line 157: S168 A873 87,0
Error in line 163: bxANF5O8per A873 175,94
Error in line 172: 86VC A873 68,4
Error in line 170: S168 S812 2,1
Error in line 174: 86VC S812 37,5
Error in line 190: 7K1i S812 12,3
Error in line 205: .K1i A8.3 59,9
Error in line 206: h2c20pQi4z A873 5p,4
Error in line 156: h2c201Qi4z S812 68,6
Error in line 201: 7K1i A873 82,1
Error in line 209: 86VC S168 69,0
Error in line 226: S168 S812 78,2
Error in line 228: S168 S168 93,1
Error in line 219: bxANF5O8per A873 118,6
Error in line 235: bxANF5O8per A986 87,7
Error in line 236: bxANF5O8per S168 60,3
